fix/front-10: fix overflowed auth success container

--- a/src/MultiFactor.SelfService.Linux.Portal/wwwroot/css/site.css
+++ b/src/MultiFactor.SelfService.Linux.Portal/wwwroot/css/site.css
@@ -896,13 +896,13 @@ table.authenticators tr {
 }
 
 @media screen and (max-width: 535px) {
-    .login {
-        padding: 0;
-    }
-
     .login .form-column {
         width: 400px;
         max-width: 100%;
+    }
+    
+    .success-title {
+        width: 12.5em;
     }
 }
 
